<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="me.jimmywang.icbluelight.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_margin="30sp"
        android:id="@+id/activityTitle" />

    <ImageView
        android:layout_margin="25sp"
        android:layout_width="580dp"
        android:layout_height="340dp"
        app:srcCompat="@drawable/icbluelight_copy"
        android:id="@+id/imageView" />

    <TextView
        android:gravity="start"
        android:layout_margin="20sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/enterNamePrompt"
        android:layout_width="712dp"
        android:layout_height="wrap_content"
        android:id="@+id/enterNamePrompt"
        android:layout_weight="0.05" />

    <EditText
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:hint="Name Here"
        android:textColorHint="@color/white"
        android:ems="10"
        android:id="@+id/username" />

    <Button
        android:layout_margin="10sp"
        android:background="@color/blue_200"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStudent" />

    <Button
        android:background="@color/blue_200"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:text="@string/stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStuff" />

</LinearLayout>
